--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,7 @@ subtitle: Product, design, and business.
 baseurl: ""
 
 footer_only_homepage: true
-footer_url: "https://github.com/pro-panda"
-footer_text: "Theme by pro-panda"
+repository: "kallemoen/kallemoen.com.git"
 
 profile-picture: assets/headshot@2x.png
 favicon_location: assets/favicon.ico
